// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should allow for conditional rendering of items 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-103-label downshift-103-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-103-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-103-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-103-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-103-item-0"
      role="option"
    >
      <span>
        With value
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Dropdown should downshift only by enabled items with value 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-14-label downshift-14-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-14-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-14-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-14-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      aria-selected="false"
      class="ListItem ListItem--disabled List__item"
      role="option"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-14-item-0"
      role="option"
    >
      <span>
        With value 1
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem List__item"
      role="option"
    >
      <span>
        Without value
      </span>
    </li>
    <div
      class="List__item customDiv"
    >
      Div
    </div>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-14-item-1"
      role="option"
    >
      <span>
        With value 2
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Dropdown should render correctly closed 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label downshift-0-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-0-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-0-label"
    class="List"
    id="downshift-0-menu"
    role="listbox"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`Dropdown should render correctly opened 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label downshift-3-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-3-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-3-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-3-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      aria-selected="false"
      class="ListItem ListItem--disabled List__item"
      role="option"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-3-item-0"
      role="option"
    >
      <span>
        With value
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Dropdown should render correctly with mixed children: array and single ListItem 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-41-label downshift-41-toggle-button"
    class="Button Button--isPrimary"
    id="downshift-41-toggle-button"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-41-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-41-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
    tabindex="-1"
  >
    <li
      aria-selected="false"
      class="ListItem ListItem--disabled List__item"
      role="option"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-41-item-0"
      role="option"
    >
      <span>
        one
      </span>
    </li>
    <li
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-41-item-1"
      role="option"
    >
      <span>
        two
      </span>
    </li>
  </ul>
</DocumentFragment>
`;
